# static_tf_release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
rpm/: template.spec
