<?xml version="1.0"?>
<package>
  <name>static_tf</name>
  <version>0.0.1</version>
  <description>The static_tf package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
